--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,40 @@
+:root {
+  --navw:220px;
+}
+
 html, body {
   margin:0;
   height:100%;
+  font-family:"Arial";
+  overflow:hidden;
+}
+
+#app {
+  display:flex;
+}
+
+.definp {
+  outline:0;
+  margin:0;
+  padding:0;
+  border:none;
+  background:transparent;
+}
+
+.gl-nav,
+.rn {
+  height:100vh;
+  max-height:100vh;
+  overflow:auto;
+  position:relative;
+}
+
+.gl-nav {
+  width:var(--navw);
+}
+
+.rn {
+  width:calc(100vw - var(--navw));
+  background:red;
+  background:#F3F3FC;
 }
