--- a/client/src/assets/home/main.css
+++ b/client/src/assets/home/main.css
@@ -77,7 +77,7 @@
 .rn-home-nav-action-statuslist {
     --trans:.25s;
 
-    width:150%;
+    width:150px;
     height:auto;
     display:flex;
     flex-direction:column;
@@ -193,6 +193,36 @@
     overflow-y:scroll;
 }
 
+.rn-home-display-conversations-list-loader {
+    --size:15px;
+
+    height:var(--size);
+    width:var(--size);
+    margin:0;
+    opacity:.2;
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-right:50%;
+    transform:translate(-50%, -50%);
+    border:5px solid transparent;
+    border-radius:50%;
+    border-top-color:lime;
+    border-right-color:yellow;
+    border-bottom-color:orange;
+    border-left-color:red;
+    animation:rn-home-display-conversations-list-loader-am linear 1s infinite;
+}
+
+@keyframes rn-home-display-conversations-list-loader-am {
+    from {
+        transform:translate(-50%, -50%) rotate(0deg);
+    }
+    to {
+        transform:translate(-50%, -50%) rotate(360deg)
+    }
+}
+
 .rn-home-display-conversations-list-conv {
     --margin:7.5px;
     --padding:15px;
@@ -209,6 +239,22 @@
     align-items:center;
     justify-content:space-between;
     flex-shrink:0;
+    position:relative;
+}
+
+.rn-home-display-conversations-list-conv > *:not(.rn-home-display-conversations-list-conv-selector) {
+    position:relative;
+    z-index:3;
+}
+
+.rn-home-display-conversations-list-conv-selector {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:2;
+    cursor:pointer;
 }
 
 .rn-home-display-conversations-list-conv:first-child {
@@ -294,6 +340,7 @@
     width:calc(60% - var(--padding) * 2);
     padding-left:var(--padding);
     padding-right:var(--padding);
+    position:relative;
 }
 
 .rn-home-display-chat-name {
@@ -316,8 +363,10 @@
     width:calc(100% - var(--padding) * 2);
     padding-left:var(--padding);
     padding-right:var(--padding);
+    overflow:scroll;
     display:flex;
     flex-direction:column;
+    position:relative;
 }
 
 .rn-home-display-chat-display > * {
@@ -519,7 +568,6 @@
 .rn-home-display-chat-display-message-content-avatar {
     width:var(--chatmessagedefsize);
     height:var(--chatmessagedefsize);
-    background:red;
     border-radius:50%;
     overflow:hidden;
     margin-right:7.5px;
@@ -551,9 +599,27 @@
     border-radius:1rem;
 }
 
+.rn-home-display-chat-display-message-content-mat > img {
+    width:128px;
+}
+
 .rn-home-display-chat-display-message.right .rn-home-display-chat-display-message-content-mat {
     background:#2A8BF2;
     color:white;
+}
+
+.rn-home-display-chat-display-message-content-mat.nobg {
+    background:transparent!important;
+}
+
+.rn-home-display-chat-display-message-content-mat.action p {
+    color:black;
+    text-align:center;
+    font-family:"Quicksand";
+    font-weight:500;
+    text-transform:uppercase;
+    font-size:.9em;
+    color:rgba(0, 0, 0, .8);
 }
 
 .rn-home-display-chat-display-message-content-mat-text {
@@ -575,4 +641,64 @@
 
 .rn-home-display-chat-display-message.right .rn-home-display-chat-display-message-time {
     align-self:flex-end;
+}
+
+.rn-home-display-chat-alert,
+.rn-home-display-chat-loader {
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-right:50%;
+    transform:translate(-50%, -50%);
+}
+
+.rn-home-display-chat-alert {
+    font-weight:300;
+    font-family:"Quicksand";
+    color:rgba(0, 0, 0, .5);
+    width:100%;
+    text-align:center;
+}
+
+.rn-home-display-chat-loader {
+    width:75%;
+    height:5px;
+    border-radius:50%;
+    background:rgba(0, 0, 0, .2);
+    position:relative;
+    overflow:hidden;
+}
+
+.rn-home-display-chat-loader:before {
+    --slice:1000%;
+
+    content:'';
+    position:absolute;
+    top:0;
+    left:0;
+    height:100%;
+    width:100%;
+    animation:rn-home-display-chat-loader-am 5s infinite;
+    animation-direction:alternate;
+}
+
+@keyframes rn-home-display-chat-loader-am {
+    0% {
+        background:red;
+    }
+    20% {
+        background:blue;
+    }
+    40% {
+        background:green;
+    }
+    60% {
+        background:orange;
+    }
+    80% {
+        background:rebeccapurple;
+    }
+    100% {
+        background:gray;
+    }
 }
