--- a/client/src/assets/home/main.css
+++ b/client/src/assets/home/main.css
@@ -702,3 +702,14 @@
         background:gray;
     }
 }
+
+.rn-home-display-conversations-list-alertion {
+    position:absolute;
+    top:5px;
+    left:50%;
+    transform:translateX(-50%);
+    font-weight:200;
+    color:rgba(0, 0, 0, .25);
+    text-transform:uppercase;
+    font-size:.7em;
+}
