Initialized search page

--- a/client/src/assets/navigation/main.css
+++ b/client/src/assets/navigation/main.css
@@ -130,6 +130,7 @@
     position:relative;
     padding-top:var(--padding);
     padding-bottom:var(--padding);
+    text-decoration:none;
 }
 
 .gl-nav-mat-btn:before {
