--- a/client/src/assets/home/main.css
+++ b/client/src/assets/home/main.css
@@ -187,10 +187,10 @@
     position:relative;
     display:flex;
     flex-direction:column;
+    align-items:center;
     padding-top:var(--padding);
     padding-bottom:var(--padding);
-    overflow-x:hidden;
-    overflow-y:scroll;
+    overflow:scroll;
 }
 
 .rn-home-display-conversations-list-loader {
@@ -228,7 +228,7 @@
     --padding:15px;
 
     height:80px;
-    width:calc(100% - var(--padding) * 2);
+    width:calc(100% - var(--padding) * 2 - 7.5px);
     background:white;
     border-radius:3px;
     margin-top:var(--margin);
@@ -240,10 +240,12 @@
     justify-content:space-between;
     flex-shrink:0;
     position:relative;
+    box-shadow:0px 0px 15px -5px rgba(0, 0, 0, .2);
 }
 
 .rn-home-display-conversations-list-conv.active {
-    background:rgba(255, 255, 255, .75);
+    background:rgba(255, 255, 255, .85);
+    box-shadow:0px 0px 15px -2px rgba(0, 0, 0, .2);
 }
 
 .rn-home-display-conversations-list-conv > *:not(.rn-home-display-conversations-list-conv-selector) {
