--- a/client/src/assets/settings/main.css
+++ b/client/src/assets/settings/main.css
@@ -119,6 +119,8 @@
 }
 
 .rn-settings-mat-display {
+    --trans:.4s;
+
     height:100%;
     width:100%;
     position:absolute;
@@ -128,14 +130,17 @@
     flex-direction:column;
     align-items:stretch;
     opacity:0;
-    transition:.4s;
+    transition:all var(--trans), visibility var(--trans);
     z-index:0;
+    visibility:hidden;
     background:white;
 }
 
 .rn-settings-mat-display.visible {
+    transition:all var(--trans), visibility 0s;
     z-index:5;
     opacity:1;
+    visibility:visible;
 }
 
 .rn-settings-mat-display-title,
@@ -287,12 +292,38 @@
 }
 
 .rn-settings-mat-display-mat-form {
-    margin-top:25px;
+    margin-top:10px;
+    display:flex;
+    align-items:center;
+    flex-wrap:wrap;
 }
 
 .rn-settings-mat-display-mat-form > * {
     --margin:15px;
 
-    margin-top:var(--margin);
-    margin-bottom:var(--margin);
+    margin-left:var(--margin);
+    margin-right:var(--margin);
+}
+
+.rn-settings-mat-display-mat-form > *:first-child {
+    margin-left:0;
+}
+
+.rn-settings-mat-display-mat-form > *:last-child {
+    margin-right:0;
+}
+
+.rn-settings-nav-alertion {
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-right:50%;
+    transform:translate(-50%, -50%);
+    margin:0;
+    z-index:3;
+    color:rgba(0, 0, 0, .45);
+    font-weight:400;
+    font-family:"Quicksand";
+    letter-spacing:.25px;
+    font-size:.9em;
 }
