--- a/client/src/assets/settings/main.css
+++ b/client/src/assets/settings/main.css
@@ -273,6 +273,54 @@
     border:1px solid red;
 }
 
+.rn-settings-ASSETS-slider {
+    display:flex;
+    align-items:center;
+}
+
+.rn-settings-ASSETS-slider * {
+    transition:.2s;
+}
+
+.rn-settings-ASSETS-slider > span {
+    font-family:"Quicksand";
+    font-weight:400;
+}
+
+.rn-settings-ASSETS-slider > div {
+    --width:40px;
+
+    height:15px;
+    width:var(--width);
+    border-radius:45px;
+    background:rgb(147, 147, 147);
+    margin-left:15px;
+    position:relative;
+    cursor:pointer;
+}
+
+.rn-settings-ASSETS-slider > div > div {
+    --size:20px;
+
+    width:var(--size);
+    height:var(--size);
+    border-radius:50%;
+    background:rgb(250, 250, 250);
+    box-shadow:0px 1px 5px 0px rgba(0, 0, 0, .2);
+    position:absolute;
+    top:50%;
+    transform:translate(-1px, -50%);
+}
+
+.rn-settings-ASSETS-slider.active > div {
+    background:rgb(113, 201, 248);
+}
+
+.rn-settings-ASSETS-slider.active > div > div {
+    background:rgb(29, 161, 242);
+    transform:translate(calc(var(--width) - 100%), -50%);
+}
+
 .rn-settings-ASSETS-input-icon {
     width:30px;
     display:flex;
