--- a/client/src/assets/search/main.css
+++ b/client/src/assets/search/main.css
@@ -6,6 +6,7 @@
     height:calc(100vh - var(--padding) * 2);
     display:flex;
     flex-direction:column;
+    background:var(--__design__homebg);
     align-items:center;
 }
 
@@ -17,7 +18,7 @@
     height:37.5px;
     width:400px;
     max-width:90%;
-    border-bottom:1px solid rgba(0, 0, 0, .15);
+    border-bottom:1px solid var(--__design__minblack);
     display:flex;
     position:relative;
 }
@@ -33,7 +34,7 @@
     align-items:center;
     justify-content:center;
     width:var(--w);
-    color:rgba(0, 0, 0, .2);
+    color:var(--__design__ciblack);
     flex-shrink:0;
 }
 
@@ -43,6 +44,7 @@
     width:calc(100% - var(--padding));
     padding-right:var(--padding);
     font-size:.95em;
+    color:var(--__design__navname);
 }
 
 .rn-search-results {
@@ -67,9 +69,9 @@
     padding-right:var(--padding);
     margin-top:var(--margin);
     margin-bottom:var(--margin);
-    box-shadow:0px 1px 15px -5px rgba(0, 0, 0, .1);
+    box-shadow:0px 1px 15px -5px var(--__design__minblack);
     height:80px;
-    background:white;
+    background:var(--__design__homeconvabg);
     position:relative;
     border-radius:5px;
 }
@@ -100,7 +102,7 @@
 
     height:var(--size);
     width:var(--size);
-    filter:drop-shadow(0px 0px 1px rgba(0, 0, 0, .2));
+    filter:drop-shadow(0px 0px 1px var(--__design__ciblack));
     position:relative;
 }
 
@@ -119,7 +121,7 @@
     top:0px;
     right:0px;
     opacity:.4;
-    border:1px solid rgba(0, 0, 0, .1);
+    border:1px solid var(--__design__minblack);
 }
 
 .rn-search-results-user-name,
@@ -131,12 +133,12 @@
 .rn-search-results-user-name {
     font-weight:400;
     font-family:"Quicksand";
-    color:rgba(0, 0, 0, .85);
+    color:var(--__design__highblack);
 }
 
 .rn-search-results-user-chat {
     font-size:1.25em;
-    color:rgba(0, 0, 0, .4);
+    color:var(--__design__lowblack);
     cursor:pointer;
 }
 
@@ -144,7 +146,7 @@
     margin-top:5px;
     width:100%;
     text-align:center;
-    color:rgba(0, 0, 0, .35);
+    color:var(--__design__lowblack);
     font-weight:400;
     font-size:.95em;
     font-family:"Quicksand";
